--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -202,7 +202,7 @@ a {
   background: #2f303a;
   margin-bottom: 94px;
   text-align: center;
-  background-image: url(/img/bgc-hero.svg);
+  background-image: url(../img/bgc-img-hero.jpg);
 }
 
 .main_class {
