--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -517,6 +517,60 @@ a {
   /* background-color: red; */
 }
 
+/* Regular customers */
+
+.client {
+  background-color: #ffffff;
+}
+
+.regular_conteiner {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  /* background-color: #2196f3; */
+}
+
+.meta {
+  width: 170px;
+  padding: 16px 32px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: center;
+  color: #AFB1B8;
+  /* background-color: red; */
+}
+
+.meta:not(:last-child) {
+  margin-right: 30px;
+}
+
+.customers {
+  margin-bottom: 50px;
+  text-align: center;
+  /* background-color: #2f303a; */
+}
+
+.cust_link {
+  justify-content: space-between;
+  display: flex;
+}
+
+.cust_img {
+  width: 106px;
+  min-height: 60px;
+  background-position: center;
+  padding: 16px 32px;
+  color: #AFB1B8;
+  background-color: rebeccapurple;
+}
+
+.meta:hover { 
+  background-color: #2196f3;
+  color: #fff;
+}
+
 /* Footer */
 
 .conteiner_footer {
