--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -520,24 +520,27 @@ a {
 /* Regular customers */
 
 .client {
+  padding-top: 87px;
   background-color: #ffffff;
   display: flexbox;
 }
 
-.customers {
-  margin-bottom: 50px;
+.regular_conteiner {
+  /* padding-top: 87px; */
+  margin-bottom: 101px;
+  outline: 1px solid rgb(106, 0, 255);
 }
 
-.regular_conteiner {
-  padding-top: 94px;
-  padding-bottom: 94px;
+.customers {
+  padding-bottom: 50px;
+  text-align: center;
 }
 
 .cust_link {
   display: flex;
   /* padding: 0; */
-  margin-top: 16px;
-  margin-bottom: 16px;
+  /* margin-top: 16px;
+  margin-bottom: 16px; */
   outline: 1px solid red;
   /* background-color: #3a2f2f; */
 }
@@ -548,11 +551,11 @@ a {
   width: 170px;
   /* height: 92px; */
   /* border: 0; */
-  /* justify-content: center; */
+  justify-content: center;
 }
 
 .meta:not(:last-child) {
-  margin-right: 30px;
+  /* margin-right: 30px; */
 }
 
 .meta:hover {
@@ -573,7 +576,7 @@ a {
   outline: 1px solid red;
   border-radius: 6px;
   background-color: #fff;
-  fill: #AFB1B8;
+  fill: #afb1b8;
 }
 
 .icon {
