--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -410,7 +410,7 @@ a {
   /* border: 0; */
   /* justify-content: center; */
   /* background-color: red; */
-  outline: 1px solid rgb(255, 0, 98);
+  /* outline: 1px solid rgb(255, 0, 98); */
 }
 
 .meta:not(:first-child) {
@@ -426,6 +426,8 @@ a {
   /* display: inline-block; */
   display: inline-flex;
   flex-wrap: wrap;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
   /* align-self: flex-end; */
   margin-right: 30px;
   /* background-color: #21f352; */
@@ -437,14 +439,14 @@ a {
   /* justify-items: center; */
   width: 106px;
   height: 80px;
-  outline: 1px solid rgb(0, 255, 8);
+  /* outline: 1px solid rgb(0, 255, 8); */
   border-radius: 6px;
   fill: #afb1b8;
-/* background-color: tomato; */
+  /* background-color: tomato; */
 }
 
 .icon:hover {
-background-color: #ffffff;
+  background-color: #ffffff;
   fill: #2196f3;
 }
 
