--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -440,7 +440,7 @@ a {
   width: 106px;
   height: 80px;
   /* outline: 1px solid rgb(0, 255, 8); */
-  border-radius: 6px;
+  /* border-radius: 6px; */
   fill: #afb1b8;
   /* background-color: tomato; */
 }
@@ -451,7 +451,8 @@ a {
 }
 
 .meta:hover {
-  border: 1px solid #2196f3;
+  fill: #2196f3;
+  outline: 1px solid #2196f3;
   border-radius: 4px;
   background-color: #ffffff;
 }
