--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -197,17 +197,17 @@ a {
 
 /* Hero */
 
-.hero {
-  background: rgba(47, 48, 58, 0.4);
+.hero:nth-child(1) {
+  background-image: url(../img/bgc-img-hero.jpg);
 }
 
 .hero {
-  /* width: 1600px; */
+  background: rgba(47, 48, 58, 0.4);
   margin: 0px;
   background: #2f303a;
   margin-bottom: 94px;
   text-align: center;
-  background-image: url(../img/bgc-img-hero.jpg);
+  /* background-image: url(../img/bgc-img-hero.jpg); */
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -452,14 +452,19 @@ a {
   /* background-color: tomato; */
 }
 
+.cust_link .dfg:hover,
+.cust_link .dfg:focus,
 .icon:hover {
-  /* background-color: #ffffff; */
-  /* fill: #2196f3; */
+  background-color: #ffffff;
+  fill: #2196f3;
+  cursor: auto;
 }
 
+.cust_link .dfg:hover,
+.cust_link .dfg:focus,
 .meta:hover {
   fill: #2196f3;
-   outline: 1px solid #2196f3;
+  outline: 1px solid #2196f3;
   border-radius: 4px;
   background-color: #ffffff;
 }
