--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -384,13 +384,13 @@ a {
 .client {
   padding-top: 87px;
   background-color: #ffffff;
-  display: flexbox;
+  display: flex;
 }
 
 .regular_conteiner {
-  /* padding-top: 87px; */
+  padding-top: 87px;
   margin-bottom: 101px;
-  /* outline: 1px solid rgb(106, 0, 255); */
+  outline: 1px solid rgb(106, 0, 255);
 }
 
 .customers {
@@ -398,77 +398,56 @@ a {
   text-align: center;
 }
 
-.cust_link {
-  display: flex;
-  /* align-self: flex-end;
-  flex-wrap: wrap; */
-  /* padding: 0; */
-  /* margin-top: 16px;
-  margin-bottom: 16px; */
-  /* outline: 1px solid red; */
-  /* background-color: #3a2f2f; */
-}
-
-.meta {
-  display: inline-block;
-  /* text-align: center; */
-  width: 170px;
-  /* height: 92px; */
-  /* border: 0; */
-  /* justify-content: center; */
-  /* background-color: red; */
-  /* outline: 1px solid rgb(255, 0, 98); */
-}
-
-.meta:not(:first-child) {
-  margin-right: 30px;
-}
-
-.meta:hover {
-  /* background-color: #2196f3; */
-  /* color: blueviolet; */
-}
-
-.dfg {
-  /* display: inline-block; */
-  display: inline-flex;
-  flex-wrap: wrap;
+.cust_link .dfg {
+  width: 166px;
+  height: 92px;
+  /* margin-right: 30px; */
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  /* align-self: flex-end; */
-  margin-right: 30px;
-  /* background-color: #21f352; */
-}
-
-.icon {
-  margin: 16px 32px;
-  display: inline-block;
-  /* justify-items: center; */
-  width: 106px;
-  height: 80px;
-  /* outline: 1px solid rgb(0, 255, 8); */
-  /* border-radius: 6px; */
-  fill: #afb1b8;
   /* background-color: tomato; */
 }
 
-.cust_link .dfg:hover,
-.cust_link .dfg:focus,
-.icon:hover {
-  background-color: #ffffff;
+.cust_link .meta {
+  width: 100%;
+  height: 100%;
+  /* background-color: red; */
+  display: flex;
+}
+
+.cust_link .icon {
+  width: 100%;
+  height: 100%;
+  padding: 16px 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   fill: #2196f3;
-  cursor: auto;
+}
+
+.dfg:not(:last-child) {
+  margin-right: 30px;
 }
 
 .cust_link .dfg:hover,
 .cust_link .dfg:focus,
 .icon:hover,
-.meta:hover {
+.icon:focus {
   fill: #2196f3;
-  /* outline: 1px solid #2196f3; */
-  border-radius: 4px;
-  background-color: #ffffff;
+  border-color: #fff;
 }
+
+
+
+.dfg {
+  display: inline-flex;
+  border-radius: 4px;
+}
+
+.icon {
+  fill: #afb1b8;
+  /* background-color: tomato; */
+}
+
 
 .meta:hover {
   outline: 1px solid #2196f3;
