--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -433,7 +433,7 @@ a {
 .regular_conteiner {
   padding-top: 87px;
   margin-bottom: 101px;
-  outline: 1px solid rgb(106, 0, 255);
+  /* outline: 1px solid rgb(106, 0, 255); */
 }
 
 .customers {
