--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -72,6 +72,8 @@ a {
 }
 
 .item {
+  display: flex;
+  text-align: center;
   /* vertical-align: middle; */
 }
 
@@ -304,10 +306,8 @@ a {
 .disc_img {
   padding: 25px 100px;
   /* outline: 1px solid #e80b85; */
-background-color: #f5f4fa;
+  background-color: #f5f4fa;
 }
-
-
 
 /* About */
 
@@ -434,13 +434,10 @@ background-color: #f5f4fa;
 
 /* .social-item:hover,
 .social-item:focus, */
- 
 
-
- .social-item:hover,
+.social-item:hover,
 .social-item:focus,
-.social-link:hover
-.social-link:focus {
+.social-link:hover .social-link:focus {
   background-color: #2196f3;
   color: #fff;
 }
