--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -182,9 +182,12 @@ a {
 
 
 .item_svg {
+  display: inline-block;
+  padding-left: 10px;
   width: 10px;
   height: 16px;
   color: #757575;
+  outline: 1px solid #f321aa;
 }
 
 
