--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -180,16 +180,15 @@ a {
   color: #2196f3;
 }
 
-
-.item_svg {
+.mail:before {
   display: inline-block;
   padding-left: 10px;
   width: 10px;
   height: 16px;
   color: #757575;
-  outline: 1px solid #f321aa;
+  /* outline: 1px solid #f321aa; */
+  background-image: url(../img/icons.svg#icon-smartphone);
 }
-
 
 /* Top line */
 
